@@ -88,7 +88,10 @@ load_theme (EyesApplet *eyes_applet, const gchar *theme_dir)
         file_name = g_strdup_printf("%s%s",theme_dir,"/config");
         theme_file = fopen (file_name, "r");
         if (theme_file == NULL) {
-                g_error ("Unable to open theme file.");
+        	g_free (eyes_applet->theme_dir);
+        	eyes_applet->theme_dir = g_strdup_printf (GEYES_THEMES_DIR "Default-tiny/");
+                file_name = g_strdup (GEYES_THEMES_DIR "Default-tiny/config");
+                theme_file = fopen (file_name, "r");
         }
         
         parse_theme_file (eyes_applet, theme_file);
