@@ -1,3 +1,8 @@
+2003-04-19  Kevin Vandersloot <kfv101@psu.edu>
+
+	* geyes.c: themes.c: handle theme directories not configuree properly. Fixes bug
+	#110852
+
 2003-03-22  Kevin Vandersloot <kfv101@psu.edu>
 
 	* geyes.c: another optimization. Don't update the applet if the cursor hasn't moved.
